--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -8,5 +8,6 @@ metadata:
 spec:
   type: other
   lifecycle: unkown
+  owner: foo
     #  definition:
     #$text: https://github.com/jsmithedin/test-repo/blob/main/openapi.json
